--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.mvc.view.suffix=.html
 spring.thymeleaf.cache=false
 server.tomcat.access_log_enabled=true
 server.tomcat.basedir:target/tomcat
+
+# mysql configuration
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysql.sqlpub.com:3306/testzhang?usessl=false
+spring.datasource.username=usertb
+spring.datasource.password=xxxxxxxx
